[package]
name = "test_os"
version = "0.1.0"
authors = ["Grant Horner <h.grant.horner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9"
volatile = "0.2"
spin = "*"
x86_64 = "*"

[dependencies.lazy_static]
version = "*"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]